--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 
 before_install:
   - mysql -e 'CREATE DATABASE `testdb`;'
-  - mysql -e 'CREATE USER oleksii@localhost IDENTIFIED BY `1`;'
+  - mysql -e 'CREATE USER oleksii@localhost IDENTIFIED BY "1";'
   - mysql -e 'GRANT ALL PRIVILEGES ON testdb.* TO oleksii@localhost;'
   - mysql testdb < mysql/main_db_bootstrap.sql
 
