--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
 alembic==1.3.1
+aniso8601==8.0.0
+astroid==2.3.3
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 Flask-Migrate==2.5.2
+Flask-RESTful==0.3.8
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+idna==2.8
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 mysql-connector==2.2.9
+pylint==2.4.4
 python-dateutil==2.8.1
 python-editor==1.0.4
+pytz==2019.3
+requests==2.22.0
 six==1.13.0
 SQLAlchemy==1.3.11
+typed-ast==1.4.0
+urllib3==1.25.8
 Werkzeug==0.16.0
+wrapt==1.11.2
 WTForms==2.2.1
