still trying to try to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,9 @@ before_install:
   - mysql -e 'GRANT ALL PRIVILEGES ON testdb.* TO oleksii@localhost;'
   - mysql testdb < mysql/main_db_bootstrap.sql
 
+before_script:
+  - export FLASK_APP="$TRAVIS_BUILD_DIR/RESTful/restful.py"
+  - export FLASK_DEBUG=1
+
 script:
   - python -m unittest discover tests/
